--- a/netease/p10.ipynb
+++ b/netease/p10.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
